--- a/ANB/src/main/resources/application.yml
+++ b/ANB/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
         show-sql: true
 currency-service:
         url: http://localhost:8081/api/v1/ce/getExchangedValue
-
+notification-service:
+        url: http://localhost:8082/api/v1/notification/
 
 
