--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
             ddl-auto: update
         show-sql: true
 
+eureka:
+    client:
+        service-url:
+            defaultZone=http://localhost:8761/eureka/:
 
 
 
