--- a/transaction-processor/src/main/resources/application.yml
+++ b/transaction-processor/src/main/resources/application.yml
@@ -13,10 +13,10 @@ spring:
             ddl-auto: update
         show-sql: true
 currency-service:
-    url: http://localhost:8081/api/v1/ce/getExchangedValue
+    url: http://CURRENCY-EXCHANGE/api/v1/ce/getExchangedValue
 account-service:
-    url: http://localhost:8080/api/v1/accounts
-
-
-
-
+    url: http://ANB/api/v1/accounts
+eureka:
+    client:
+        service-url:
+            defaultZone=http://localhost:8761/eureka/:
