--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -11,8 +11,10 @@ spring:
     jpa:
         hibernate:
             ddl-auto: update
-        show-sql: true
-
+    kafka:
+        bootstrap-servers: localhost:9092
+        consumer:
+            group-id: notification-group
 eureka:
     client:
         service-url:
