--- a/transaction-processor/src/main/resources/application.yml
+++ b/transaction-processor/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
+    kafka:
+        bootstrap-servers: localhost:9092
 currency-service:
     url: http://CURRENCY-EXCHANGE/api/v1/ce/getExchangedValue
 account-service:
@@ -20,3 +22,4 @@ eureka:
     client:
         service-url:
             defaultZone=http://localhost:8761/eureka/:
+
