--- a/ANB/src/main/resources/application.yml
+++ b/ANB/src/main/resources/application.yml
@@ -1,24 +1,15 @@
-server:
-    port: 8080
 spring:
     application:
         name: ANB
-    datasource:
-        url: jdbc:postgresql://localhost:5432/ANB
-        username: trroooyyyy
-        password: "06062023"
-        driver-class-name: org.postgresql.Driver
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-currency-service:
-        url: http://CURRENCY-EXCHANGE/api/v1/ce/getExchangedValue
-notification-service:
-        url: http://NOTIFICATION/api/v1/notification/
-transaction-service:
-        url: http://TRANSACTION-PROCESSOR/api/v1/transactions/
-eureka:
-    client:
-        service-url:
-            defaultZone=http://localhost:8761/eureka/:
+    profiles:
+        active: dev
+    config:
+        import: "configserver:http://localhost:8888"
+    cloud:
+        config:
+            fail-fast: true
+management:
+    endpoints:
+        web:
+            exposure:
+                include: refresh, health, info, env
