--- a/currency-exchange/src/main/resources/application.yml
+++ b/currency-exchange/src/main/resources/application.yml
@@ -1,21 +1,10 @@
-server:
-    port: 8081
 spring:
     application:
         name: currency-exchange
-    datasource:
-        url: jdbc:postgresql://localhost:5432/currency-exchange
-        username: trroooyyyy
-        password: "06062023"
-        driver-class-name: org.postgresql.Driver
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-eureka:
-    client:
-        service-url:
-            defaultZone=http://localhost:8761/eureka/:
-
-
-
+    profiles:
+        active: dev
+    config:
+        import: "configserver:http://localhost:8888"
+    cloud:
+        config:
+            fail-fast: true
