--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -1,24 +1,10 @@
-server:
-    port: 8082
 spring:
     application:
         name: notification
-    datasource:
-        url: jdbc:postgresql://localhost:5432/notification
-        username: trroooyyyy
-        password: "06062023"
-        driver-class-name: org.postgresql.Driver
-    jpa:
-        hibernate:
-            ddl-auto: update
-    kafka:
-        bootstrap-servers: localhost:9092
-        consumer:
-            group-id: notification-group
-eureka:
-    client:
-        service-url:
-            defaultZone=http://localhost:8761/eureka/:
-
-
-
+    profiles:
+        active: dev
+    config:
+        import: "configserver:http://localhost:8888"
+    cloud:
+        config:
+            fail-fast: true
