--- a/transaction-processor/src/main/resources/application.yml
+++ b/transaction-processor/src/main/resources/application.yml
@@ -1,25 +1,10 @@
-server:
-    port: 8083
 spring:
     application:
         name: transaction-processor
-    datasource:
-        url: jdbc:postgresql://localhost:5432/transaction-processor
-        username: trroooyyyy
-        password: "06062023"
-        driver-class-name: org.postgresql.Driver
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-    kafka:
-        bootstrap-servers: localhost:9092
-currency-service:
-    url: http://CURRENCY-EXCHANGE/api/v1/ce/getExchangedValue
-account-service:
-    url: http://ANB/api/v1/accounts
-eureka:
-    client:
-        service-url:
-            defaultZone=http://localhost:8761/eureka/:
-
+    profiles:
+        active: dev
+    config:
+        import: "configserver:http://localhost:8888"
+    cloud:
+        config:
+            fail-fast: true
