--- a/ANB/src/main/resources/application.yml
+++ b/ANB/src/main/resources/application.yml
@@ -1,15 +1,15 @@
-spring:
-    application:
-        name: ANB
-    profiles:
-        active: dev
-    config:
-        import: "configserver:http://localhost:8888"
-    cloud:
-        config:
-            fail-fast: true
 management:
     endpoints:
         web:
             exposure:
                 include: refresh, health, info, env
+spring:
+    application:
+        name: ANB
+    cloud:
+        config:
+            fail-fast: true
+    config:
+        import: configserver:http://localhost:8888
+    profiles:
+        active: dev
